[package]
name = "timejumper" # ToDo
version = "0.1.0"
publish = false
authors = ["Bobbbay <bobbbay.b@gmail.com>"]
edition = "2021"

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy_kira_audio = { version = "0.9" }
bevy_asset_loader = { version = "0.10" }
rand = "0.8.3"
bevy_egui = "0.14.0"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"

[package.metadata.nix]
build = true
